local-store/devops/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fps-deployment-ms-com.farmaciasperuanas.pmmli.localStore-localStore
  namespace: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore
      tier: backend
  template:
    metadata:
      labels:
        app: fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore
        tier: backend
    spec:
      containers:
        - name: fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore
          image: gcr.io//fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore:
          resources:
            requests:
              cpu: 0.25
              memory: "256Mi"
            limits:
              cpu: 1
              memory: "1024Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fps-svc-ms-com.farmaciasperuanas.pmmli.localStore-localStore
  namespace: 
spec:
  selector:
    app: fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore
    tier: backend
  ports:
    - name: http
      port: 
      #protocol: "TCP"
      #targetPort: 
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: fps-expc-ms-com.farmaciasperuanas.pmmli.localstore-localstore
  name: fps-ingress-ms-com.farmaciasperuanas.pmmli.localStore-localStore
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 400k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.org/location-snippets: |
      server_tokens off;
      add_header Content-Security-Policy: "default-src 'self'; script-src 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/; object-src 'none'; style-src 'self' 'unsafe-inline'; frame-src 'self' https://www.google.com/recaptcha/; script-src 'self' https://www.google-analytics.com";
      add_header Referrer-Policy: "Referrer-Policy: strict-origin-when-cross-origin";
      add_header X-Frame-Options: "SAMEORIGIN" always;
      add_header X-XSS-Protection: "1; mode=block" always;
      add_header X-Content-Type-Options: "nosniff" always;
      add_header Feature-Policy "autoplay 'none'; camera 'none'" always;
      add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
  namespace: 
spec:
  rules:
    - host: .
      http:
        paths:
          - backend:
              service:
                name: fps-svc-ms-com.farmaciasperuanas.pmmli.localStore-localStore
                port:
                  number: 
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - .
      secretName:
